--- a/ConsoleWriting/Dockerfile
+++ b/ConsoleWriting/Dockerfile
@@ -2,6 +2,7 @@ FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
 WORKDIR /app
 
 RUN dotnet --version
+RUN echo "$PWD"
 
 COPY ConsoleWriting.csproj ./
 RUN dotnet restore
