--- a/ConsoleWriting/Dockerfile
+++ b/ConsoleWriting/Dockerfile
@@ -8,7 +8,7 @@ COPY ConsoleWriting/ConsoleWriting.csproj ./
 RUN dotnet restore
 
 COPY . ./
-RUN dotnet publish -c Release -o out
+RUN dotnet publish ConsoleWriting.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:5.0
 WORKDIR /app
