--- a/ConsoleWriting/Dockerfile
+++ b/ConsoleWriting/Dockerfile
@@ -2,7 +2,6 @@ FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
 WORKDIR /app
 
 RUN dotnet --version
-RUN echo "$PWD"
 
 COPY ConsoleWriting/ConsoleWriting.csproj ./
 RUN dotnet restore
@@ -14,3 +13,5 @@ FROM mcr.microsoft.com/dotnet/aspnet:5.0
 WORKDIR /app
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "ConsoleWriting.dll"]
+
+# docker inspect ghcr.io/petriceko/my-image-name
